on mobile, and on desktop respective displays fixed..

--- a/src/common/styles/commonClasses.css
+++ b/src/common/styles/commonClasses.css
@@ -110,7 +110,7 @@
 }
 
 .only-desktop {
-    display: block;
+    display: block!important;
 }
 
 .only-mobile {
@@ -123,7 +123,7 @@
     }
 
     .only-mobile {
-        display: block;
+        display: block!important;
     }
 }
 
